# Prism

./: Cargo.toml  README.md  build.sh  nexus.wit
app/: Cargo.toml
app/src/: main.rs  state.rs
app/src/abi/: mod.rs  ui.rs
app/src/app_state/: mod.rs
app/src/bus/: mod.rs
app/src/manager/: mod.rs
app/src/ui/: mod.rs  sidebar.rs  window.rs
app/src/ui_state/: mod.rs
docs/: main_en.md  main_rus.md  temp.md
plugins/test/: Cargo.toml
plugins/test/src/: main.rs
plugins/test2/: Cargo.toml
plugins/test3/: Cargo.toml
sdk/: Cargo.toml
sdk/macros/: Cargo.toml
sdk/macros/src/: lib.rs
sdk/src/: lib.rs  ui.rs
